--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Alexa Skill for Monzo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/_mocha test"
   },
   "author": "Rory King",
   "license": "ISC",
@@ -20,6 +20,9 @@
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint-plugin-standard": "^2.0.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "nock": "^8.1.0"
   }
 }
