--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.15.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
+    "string-template": "^1.0.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
