--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Rory King",
   "license": "ISC",
   "dependencies": {
-    "5to6-codemod": "^1.7.1",
     "ask-sdk": "^2.0.7",
     "ask-sdk-v1adapter": "^2.0.8",
     "async": "^2.0.1",
     "moment": "^2.15.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
+    "source-map-support": "^0.5.9",
     "string-template": "^1.0.0",
     "underscore": "^1.8.3"
   },
@@ -33,10 +33,8 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.8.0",
-    "mocha": "^3.5.3",
-    "nock": "^8.2.2",
     "prettier": "^1.14.2",
-    "webpack": "^4.17.2",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "zip-webpack-plugin": "^3.0.0"
   }
